--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   scroll_to_index: ^3.0.1
   url_launcher: ^6.1.5 #URLauncher
   http: ^1.0.0 #httpclient
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -28,9 +29,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-
-  #assets:
-  #- assets/
+  assets:
+    - assets/svg/
 
   fonts:
   - family: GoogleSans
