--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/svg/
+    - assets/pics/SD_Blue.png
 
   fonts:
   - family: GoogleSans
